# t3

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.yaml
configs/datasets/: calandra17_classification.yaml  cnc_mae.yaml  cnc_pose.yaml  eval_ds_cls_densetact.yaml  eval_ds_cls_finray.yaml  eval_ds_cls_mini.yaml  eval_ds_cls_svelte.yaml  eval_ds_cls_wedge.yaml  eval_ds_pose_densetact.yaml  eval_ds_pose_finray.yaml  eval_ds_pose_mini.yaml  eval_ds_pose_svelte.yaml  eval_ds_pose_wedge.yaml  objectfolder_real_classification.yaml  panda_mae_autogen.yaml  panda_mae_small.yaml  panda_pose_autogen.yaml  panda_pose_small.yaml  single_tower_mae.yaml  touch_and_go_classification.yaml  visgel_variance_estimation.yaml  yuan18_classification.yaml
configs/network/: finetune_exp_cls.yaml  finetune_exp_pose_regression.yaml  pretrain1_cross_mae.yaml  pretrain1_mae.yaml  pretrain2.yaml
dataset_preproc/: README.md  calculate_normalization.py  objectfolder_real_metadata.csv  preprocess_calandra17_images.py  preprocess_objectfolder_real_images.py  preprocess_touchandgo_images.py  preprocess_tvl_images.py  preprocess_visgel_images.py  preprocess_ycbsight_images.py  preprocess_yuan18_images.py  utils.py
scripts/: train_nn.py
t3/: __init__.py  _calandra17_label_dict.py  data_loader.py  pretrain.py  task_utils.py  utils.py
t3/models/: __init__.py  decoder.py  encoder.py  mae_recon_loss.py  nn_utils.py  other_losses.py  t3.py  trunk.py
